syntax = "proto3";
option go_package = "Replication/grpc/proto";




message Empty {}
message PlaceBid {
    int32 id = 1;
    int32 bid = 2;
}
message BidAcknowledgement {
    string acknowledgement = 1;
    repeated string Nodeports = 2;
}
message ShowResult {
    string Result = 1;
}

message Nodes {
    string port = 1;
}


service Replication {
   
   rpc Bid (PlaceBid) returns (BidAcknowledgement) {}; 
   rpc Result (Empty) returns (ShowResult) {};
   rpc Heartbeat (Nodes) returns (Empty) {};
   rpc Update (PlaceBid) returns (Empty) {}; 
   rpc Discover (Empty) returns (Nodes);
}



